# pySSE

./: .env.example  .gitignore  README.md  URS_SampleSizeEstimator.md  main.py  mypy.ini  pyproject.toml  test_output.txt
.kiro/specs/pdf-table-line-breaks/: tasks.md
.kiro/specs/pdf-table-line-breaks_done/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/playwright-non-normal-tab-selector-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/playwright-ui-testing-done/: design.md  requirements.md  tasks.md
.kiro/specs/sample-size-estimator/: design.md  requirements.md  (+1 more)
.kiro/specs/sample-size-estimator-done/: tasks.md
.validation/: validation_state.json
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  VALIDATED_HASH_HISTORY.md  VALIDATION_PROTOCOL.md
examples/: QUICK_START.md  README.md  generate_test_data.py  generated_bimodal.csv  generated_exponential.csv  generated_lognormal.csv  generated_normal.csv  generated_outliers.csv  generated_uniform.csv  sample_data_bimodal.csv  sample_data_normal.csv  sample_data_skewed.csv  sample_data_uniform.csv  sample_data_with_outliers.csv
reports/: .gitignore
scripts/: check_environment.py  generate_validation_certificate.py  validate.py
src/sample_size_estimator/: __init__.py  __main__.py  app.py  config.py  logger.py  models.py  reports.py  validation.py
tests/: UI_TESTS_README.md  __init__.py  conftest.py  playwright_config.py  test_app_validation_integration.py  test_attribute_calcs.py  test_browser_fixture.py  test_bugfix_exploration.py  test_bugfix_preservation.py  test_config.py  test_environment_check.py  test_fixture_properties.py  test_integration.py  test_logger.py  test_models.py  test_non_normal_calcs.py  test_pdf_table_preservation_properties.py  test_pdf_table_text_overflow_exploration.py  test_pdf_validation_attribute.py  test_pdf_validation_non_normal.py  test_pdf_validation_reliability.py  test_pdf_validation_variables.py  test_playwright_config.py  test_playwright_helpers.py  test_playwright_non_normal_exploration.py  test_playwright_urs_markers.py  test_reliability_calcs.py  test_reports.py  test_resource_cleanup.py  test_subprocess_manager.py  test_ui_playwright_attribute.py  test_ui_playwright_non_normal.py  test_ui_playwright_reliability.py  test_ui_playwright_variables.py  test_validation.py  test_validation_certificate.py  test_validation_certificate_integration.py  test_validation_iq.py  test_validation_iq_unit.py  test_validation_models.py  (+9 more)
tests/utils/: pdf_validator.py
(+29 files in other folders)
